--- a/app/pug/main-layout.pug
+++ b/app/pug/main-layout.pug
@@ -17,3 +17,4 @@ html(lang="en")
     script document.querySelector('.svg-placeholder').innerHTML = SVG_SPRITE
     .wrapper
       block content
+    script(src="./js/scripts.min.js")
