--- a/app/pug/pages/about.pug
+++ b/app/pug/pages/about.pug
@@ -17,7 +17,7 @@ block content
         polygon(points="0,0 0,100 1000,100")
       .about__section--wrapper
         .title.about__section--title About Me
-          +image-svg("about__section--image","about_header","0 0 498.161 175.44",357,125)
+          +image-svg("about__section--image","about_header","0 0 498.161 175.44")
         .user-about
           .user-about__picture
             img(src="./img/155312_600.jpg")
