--- a/app/pug/sections/hero.pug
+++ b/app/pug/sections/hero.pug
@@ -3,7 +3,7 @@ section.section.hero
     img(src="img/bg/portfolio-mount.jpg").hero__bg--image
 
   ul.socials
-    each item in ['vk','github','in']
+    each item in ['github','upwork']
       li.socials__item
         a(href="#").socials__link
           +image-svg("socials__image socials__image--" + item,item)
@@ -12,7 +12,7 @@ section.section.hero
     +image-svg("hamburger__image","hamburger","0 0 40 35")
 
   a(href="").down-arrow
-    +image-svg("down-arrow--image","arrow_down","0 0 25.18 16.164",25,16)
+    +image-svg("down-arrow--image","arrow_down","0 0 25.18 16.164")
 
   .hero__title
     +image-svg("hero__title--image","portfolio_header","0 0 1175.495 313.961")
