--- a/app/pug/pages/works.pug
+++ b/app/pug/pages/works.pug
@@ -40,11 +40,11 @@ block content
       .slider__buttons
         button.slider__btn.slider__btn--prev
           img(src="./img/mockup-tri.png").slider__btn--image
-          .shadow
+          span.shadow
           +image-svg("slider__arrow","portf_arrow_down")
         button.slider__btn.slider__btn--next
           img(src="./img/mockup-yo.png").slider__btn--image
-          .shadow
+          span.shadow
           +image-svg("slider__arrow","portf_arrow_up")
 
   section.reviews
