--- a/app/scss/blocks/auth.scss
+++ b/app/scss/blocks/auth.scss
@@ -1,7 +1,5 @@
 .auth-container {
-  background: url('../img/bg/auth-mount.jpg') center center no-repeat;
-  background-size: cover;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
