--- a/app/css/style.css
+++ b/app/css/style.css
@@ -284,9 +284,7 @@ img {
 }
 
 .auth-container {
-  background: url("../img/bg/auth-mount.jpg") center center no-repeat;
-  background-size: cover;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
@@ -483,19 +481,60 @@ img {
   fill: #fff;
 }
 
-.hero {
+.mountains .hero {
   min-height: 40.625rem;
   overflow: hidden;
   color: #ffffff;
   height: 100vh;
 }
 
-.hero__bg {
+.mountains .hero__bg {
   position: absolute;
   left: 0;
   top: 0;
   right: 0;
   bottom: 0;
+}
+
+.desert .hero {
+  min-height: 40.625rem;
+  overflow: hidden;
+  color: #ffffff;
+  height: 100vh;
+}
+
+.desert .hero__bg {
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 382rem;
+  background: url("../img/bg/sand.jpg") center left repeat-x;
+  -webkit-animation: bg 120s linear infinite;
+          animation: bg 120s linear infinite;
+}
+
+@-webkit-keyframes bg {
+  from {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+
+  to {
+    -webkit-transform: translateX(-191rem);
+            transform: translateX(-191rem);
+  }
+}
+
+@keyframes bg {
+  from {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+
+  to {
+    -webkit-transform: translateX(-191rem);
+            transform: translateX(-191rem);
+  }
 }
 
 .hero__title {
@@ -520,7 +559,7 @@ img {
 }
 
 .hero__bg--image {
-  max-width: 120%;
+  max-width: 100%;
 }
 
 .nav-menu__item {
@@ -539,6 +578,58 @@ img {
 
 .nav-menu__link:hover {
   color: #00bfa5;
+}
+
+.wrapper-parallax {
+  overflow: hidden;
+  background-color: #fedcc8;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.parallax {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.parallax__layer {
+  height: 100%;
+  position: absolute;
+  width: 187.5rem;
+  left: 50%;
+  margin-left: -93.75rem;
+}
+
+.parallax__image {
+  position: absolute;
+  bottom: 0;
+}
+
+.parallax-mount {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.parallax-mount__layer {
+  height: 100%;
+  position: absolute;
+  width: 110%;
+  left: 50%;
+  margin-left: -55%;
+}
+
+.parallax-mount__image {
+  height: auto;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 
 .reviews {
@@ -578,7 +669,6 @@ img {
 .skill__name {
   font-size: 0.8125rem;
   font-weight: 500;
-  position: absolute;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -712,7 +802,6 @@ img {
 }
 
 .slider__arrow {
-  position: absolute;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -894,7 +983,6 @@ img {
 }
 
 .works__section--image {
-  position: absolute;
   opacity: .07;
   position: absolute;
   top: 50%;
