--- a/app/pug/pages/index.pug
+++ b/app/pug/pages/index.pug
@@ -5,6 +5,26 @@ block title
 
 block content
   .auth-container
+    .parallax-mount
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/Layer9.jpg" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/Layer8-1.png" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/Layer7-1.png" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/Layer6-1.png" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/6cloud_PNG4.png" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/Layer4-1.png" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/3sky.png" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/Layer2-1.png" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/Layer1-1.png" class="parallax-mount__image")
+
     .auth
       .auth__info
         .user
