--- a/app/pug/sections/hero.pug
+++ b/app/pug/sections/hero.pug
@@ -1,6 +1,24 @@
 section.section.hero
   .hero__bg
-    img(src="img/bg/portfolio-mount.jpg").hero__bg--image
+    .parallax-mount
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/Layer9.jpg" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/Layer8-1.png" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/Layer7-1.png" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/Layer6-1.png" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/6cloud_PNG4.png" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/Layer4-1.png" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/3sky.png" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/Layer2-1.png" class="parallax-mount__image")
+      .parallax-mount__layer
+        img(src="./img/parallax-mount/Layer1-1.png" class="parallax-mount__image")
 
   ul.socials
     each item in ['github','upwork']
