--- a/app/pug/pages/index.pug
+++ b/app/pug/pages/index.pug
@@ -5,25 +5,26 @@ block title
 
 block content
   .auth-container
-    .parallax-mount
-      .parallax-mount__layer
-        img(src="./img/parallax-mount/Layer9.jpg" class="parallax-mount__image")
-      .parallax-mount__layer
-        img(src="./img/parallax-mount/Layer8-1.png" class="parallax-mount__image")
-      .parallax-mount__layer
-        img(src="./img/parallax-mount/Layer7-1.png" class="parallax-mount__image")
-      .parallax-mount__layer
-        img(src="./img/parallax-mount/Layer6-1.png" class="parallax-mount__image")
-      .parallax-mount__layer
-        img(src="./img/parallax-mount/6cloud_PNG4.png" class="parallax-mount__image")
-      .parallax-mount__layer
-        img(src="./img/parallax-mount/Layer4-1.png" class="parallax-mount__image")
-      .parallax-mount__layer
-        img(src="./img/parallax-mount/3sky.png" class="parallax-mount__image")
-      .parallax-mount__layer
-        img(src="./img/parallax-mount/Layer2-1.png" class="parallax-mount__image")
-      .parallax-mount__layer
-        img(src="./img/parallax-mount/Layer1-1.png" class="parallax-mount__image")
+    .hero__bg
+      .parallax-mount
+        .parallax-mount__layer
+          img(src="./img/parallax-mount/Layer9.jpg" class="parallax-mount__image")
+        .parallax-mount__layer
+          img(src="./img/parallax-mount/Layer8-1.png" class="parallax-mount__image")
+        .parallax-mount__layer
+          img(src="./img/parallax-mount/Layer7-1.png" class="parallax-mount__image")
+        .parallax-mount__layer
+          img(src="./img/parallax-mount/Layer6-1.png" class="parallax-mount__image")
+        .parallax-mount__layer
+          img(src="./img/parallax-mount/6cloud_PNG4.png" class="parallax-mount__image")
+        .parallax-mount__layer
+          img(src="./img/parallax-mount/Layer4-1.png" class="parallax-mount__image")
+        .parallax-mount__layer
+          img(src="./img/parallax-mount/3sky.png" class="parallax-mount__image")
+        .parallax-mount__layer
+          img(src="./img/parallax-mount/Layer2-1.png" class="parallax-mount__image")
+        .parallax-mount__layer
+          img(src="./img/parallax-mount/Layer1-1.png" class="parallax-mount__image")
 
     .auth
       .auth__info
@@ -37,9 +38,9 @@ block content
               a.auth__socals--link
                 +image-svg('auth__socials--image auth__socials--' + icon,icon,"0 0 30 30")
       .auth__btns
-        a(href="#").auth__btn My last Works
-        a(href="#").auth__btn About Me
+        a(href="works.html").auth__btn My last Works
+        a(href="about.html").auth__btn About Me
         a(href="#").auth__btn Change Theme
 
-  .auth__login
-    button.auth__login--link  Authorizations
+    .auth__login
+      button.auth__login--link  Authorizations
