--- a/app/pug/pages/index.pug
+++ b/app/pug/pages/index.pug
@@ -40,7 +40,6 @@ block content
       .auth__btns
         a(href="works.html").auth__btn My last Works
         a(href="about.html").auth__btn About Me
-        a(href="#").auth__btn Change Theme
-
+        button.auth__btn.change__btn Change Theme
     .auth__login
       button.auth__login--link  Authorizations
