--- a/app/scss/blocks/slider.scss
+++ b/app/scss/blocks/slider.scss
@@ -84,7 +84,7 @@
   background-color: transparent;
   border: none;
   padding: 0;
-  flex-grow: 1;
+  flex: 1 1 50%;
   cursor: pointer;
   position: relative;
   transition: all .3s ease-in-out;
@@ -95,9 +95,41 @@
   }
 }
 
-.slider__btn--image{
-  display: block;
+.slider-btn__display{
+  position: relative;
+  overflow: hidden;
+  width: 300px;
+  height: 190px;
+}
+.slider-btn__list{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.slider-btn__item{
+  position: absolute;
+  left: 0;
   width: 100%;
+  height: 100%;
+  top: -100%;
+}
+
+.slider-btn__item--active{
+  top: 0;
+}
+.slider__btn--image{
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
 }
 
 .shadow{
@@ -106,13 +138,13 @@
   right: 0;
   bottom: 0;
   top: 0;
-  background-color: rgba(black,.5);
+  background-color: rgba(#cac9c4,.8);
 }
 
 .slider__arrow{
   @include centered();
   width: 53px;
   height: 34px;
-  fill: rgba(#fff,.5);
+  fill: rgba(#fff,.8);
   transition: all .3s ease-in-out;
 }
