--- a/app/css/style.css
+++ b/app/css/style.css
@@ -860,7 +860,7 @@ img {
   padding-bottom: 3.125rem;
 }
 
-.slider__display--picture {
+.slideshow__display-pic {
   display: inline-block;
   padding-bottom: 3.125rem;
 }
@@ -919,8 +919,8 @@ img {
 .slider-btn__display {
   position: relative;
   overflow: hidden;
-  width: 18.75rem;
-  height: 11.875rem;
+  width: 100%;
+  height: 10.625rem;
 }
 
 .slider-btn__list {
@@ -936,11 +936,84 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
+}
+
+.slider__btn--next .slider-btn__item {
   top: -100%;
 }
 
-.slider-btn__item--active {
+.slider__btn--next .slider-btn__item--active {
   top: 0;
+}
+
+.slider__btn--prev .slider-btn__item {
+  top: 100%;
+}
+
+.slider__btn--prev .slider-btn__item--active {
+  top: 0;
+}
+
+@-webkit-keyframes top {
+  to {
+    top: 100%;
+  }
+}
+
+@keyframes top {
+  to {
+    top: 100%;
+  }
+}
+
+@-webkit-keyframes topZero {
+  to {
+    top: 0;
+  }
+}
+
+@keyframes topZero {
+  to {
+    top: 0;
+  }
+}
+
+@-webkit-keyframes topMinus {
+  to {
+    top: -100%;
+  }
+}
+
+@keyframes topMinus {
+  to {
+    top: -100%;
+  }
+}
+
+@-webkit-keyframes bottom {
+  to {
+    bottom: 100%;
+  }
+}
+
+@keyframes bottom {
+  to {
+    bottom: 100%;
+  }
+}
+
+@keyframes topZero {
+  to {
+    bottom: 0;
+  }
+}
+
+@keyframes topMinus {
+  to {
+    bottom: -100%;
+  }
 }
 
 .slider__btn--image {
@@ -975,6 +1048,62 @@ img {
   fill: rgba(255, 255, 255, 0.8);
   -webkit-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
+}
+
+.slideshow__display {
+  position: relative;
+  width: 100%;
+  height: 25rem;
+}
+
+.slideshow__preloader {
+  position: absolute;
+  display: none;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background: url("../img/preloader.gif");
+  width: 4rem;
+  height: 4rem;
+}
+
+.slideshow__display-pic {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+.slideshow__list {
+  text-align: center;
+}
+
+.slideshow__item {
+  display: inline-block;
+  width: 3.125rem;
+  height: 3.125rem;
+}
+
+.slideshow__link {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.slideshow__image {
+  max-width: 90%;
+  max-height: 90%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
 }
 
 .socials {
@@ -1264,7 +1393,7 @@ img {
     padding-bottom: 0;
   }
 
-  .slider__display--picture {
+  .slideshow__display-pic {
     width: 100%;
   }
 
@@ -1322,8 +1451,8 @@ img {
     margin-left: -175%;
   }
 
-  .slider__display--picture {
-    padding-bottom: 15.625rem;
+  .slideshow__display-pic {
+    padding-bottom: 3.125rem;
   }
 
   .socials {
