--- a/app/pug/main-layout.pug
+++ b/app/pug/main-layout.pug
@@ -19,4 +19,5 @@ html(lang="en")
     .wrapper
       block content
     include ./sections/preloader
+    //script(src="./libs/jQuery/dist/jquery.min.js")
     script(src="./js/scripts.min.js")
