--- a/app/pug/pages/works.pug
+++ b/app/pug/pages/works.pug
@@ -35,40 +35,48 @@ block content
           .slider__desc--btn
             a(href="").btn PSD File
     .slider__display
-      .slider__image
-        img(src="./img/site-glow.png").slider__display--picture
-
+      .slideshow
+        .slideshow__display
+          .slideshow__preloader
+          img.slideshow__display-pic(src="./img/site-Bakery.png")
+        ul.slideshow__list
+          - var images = ['./img/site-Bakery.png','./img/site-film.png','./img/site-glow.png','./img/site-j-wood.png','./img/site-maker.png']
+          - for (var i = 0; i < images.length; i++)
+            if i === 0
+              li(class="slideshow__item slideshow__item--active")
+                a.slideshow__link(href=images[i])
+                  img.slideshow__image(src=images[i])
+            else
+              li(class="slideshow__item")
+                a.slideshow__link(href=images[i])
+                  img.slideshow__image(src=images[i])
       .slider__buttons
         .slider__btn.slider__btn--prev
           .slider-btn__display
             ul.slider-btn__list
-              li.slider-btn__item
-                img(src="./img/site-Bakery.png").slider__btn--image
-              li.slider-btn__item.slider-btn__item--active
-                img(src="./img/site-film.png").slider__btn--image
-              li.slider-btn__item
-                img(src="./img/site-glow.png").slider__btn--image
-              li.slider-btn__item
-                img(src="./img/site-j-wood.png").slider__btn--image
-              li.slider-btn__item
-                img(src="./img/site-maker.png").slider__btn--image
-          span.shadow
-          +image-svg("slider__arrow","portf_arrow_down")
+              - var images = ['./img/site-Bakery.png','./img/site-film.png','./img/site-glow.png','./img/site-j-wood.png','./img/site-maker.png']
+              - for (var i = 0; i < images.length; i++)
+                if i === 0
+                  li(class="slider-btn__item slider-btn__item--active")
+                    img.slider__btn--image(src=images[i])
+                else
+                  li(class="slider-btn__item")
+                    img.slider__btn--image(src=images[i])
+          span.shadow.shadow__prev
+          +image-svg("slider__arrow slider__arrow--prev","portf_arrow_up")
         .slider__btn.slider__btn--next
           .slider-btn__display
             ul.slider-btn__list
-              li.slider-btn__item
-                img(src="./img/site-Bakery.png").slider__btn--image
-              li.slider-btn__item
-                img(src="./img/site-film.png").slider__btn--image
-              li.slider-btn__item
-                img(src="./img/site-glow.png").slider__btn--image
-              li.slider-btn__item.slider-btn__item--active
-                img(src="./img/site-j-wood.png").slider__btn--image
-              li.slider-btn__item
-                img(src="./img/site-maker.png").slider__btn--image
-          span.shadow
-          +image-svg("slider__arrow","portf_arrow_up")
+              - var images = ['./img/site-Bakery.png','./img/site-film.png','./img/site-glow.png','./img/site-j-wood.png','./img/site-maker.png']
+              - for (var i = 0; i < images.length; i++)
+                if i === 2
+                  li(class="slider-btn__item slider-btn__item--active")
+                    img.slider__btn--image(src=images[i])
+                else
+                  li(class="slider-btn__item")
+                    img.slider__btn--image(src=images[i])
+          span.shadow.shadow__next
+          +image-svg("slider__arrow slider__arrow--next","portf_arrow_down")
 
   section.reviews
   include ../sections/footer
