--- a/app/scss/blocks/slider.scss
+++ b/app/scss/blocks/slider.scss
@@ -34,13 +34,13 @@
   };
 }
 
-.slider__display--picture{
+.slideshow__display-pic{
   display: inline-block;
   padding-bottom: 50px;
   @include tablet-block{
     width: 100%;
   };
-  @include phone(padding-bottom,250px);
+  @include phone(padding-bottom,50px);
 }
 
 .slider__desc--info{
@@ -98,8 +98,9 @@
 .slider-btn__display{
   position: relative;
   overflow: hidden;
-  width: 300px;
-  height: 190px;
+  width: 100%;
+  height: 170px;
+
 }
 .slider-btn__list{
   position: absolute;
@@ -114,12 +115,60 @@
   left: 0;
   width: 100%;
   height: 100%;
-  top: -100%;
+  transition: all 300ms linear;
 }
 
-.slider-btn__item--active{
-  top: 0;
+.slider__btn--next{
+  .slider-btn__item{
+    top: -100%;
+  }
+  .slider-btn__item--active{
+    top: 0;
+  }
 }
+
+.slider__btn--prev{
+  .slider-btn__item{
+    top: 100%;
+  }
+  .slider-btn__item--active{
+    top: 0;
+  }
+}
+
+@keyframes top {
+   to{
+     top: 100%;
+   }
+ }
+@keyframes topZero {
+  to{
+    top: 0;
+  }
+}
+@keyframes topMinus {
+  to{
+    top: -100%;
+  }
+}
+
+@keyframes bottom {
+  to{
+    bottom: 100%;
+  }
+}
+@keyframes topZero {
+  to{
+    bottom: 0;
+  }
+}
+@keyframes topMinus {
+  to{
+    bottom: -100%;
+  }
+}
+
+
 .slider__btn--image{
   max-width: 100%;
   max-height: 100%;
